<resources>
    <string name="app_name">SaveEasy</string>
    <string name="title_scan">Scan</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_receipts">Receipts</string>
    <string name="title_reports">Reports</string>
    <string name="title_signin">Signin</string>
    <string name="title_signup">Signin</string>
    <string name="title_reset_password">Signin</string>
    <string name="title_forget_password">Signin</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome back</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="username">Username</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="_0">0</string>
    <string name="label_4digitd">Enter the 4 digits sent to your phone</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="enter_code">Enter code</string>
    <string name="label_continue">Continue</string>
    <string name="label_resend_code">Resend code?</string>
</resources>