<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.SaveEasy.FullscreenContainer"
    tools:context=".ui.signup.SignUpFragment">

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray50"

        android:fitsSystemWindows="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="715dp"
            android:id="@+id/signup_ConsLayControls"
            android:paddingHorizontal="20dp"
            >


            <TextView
                android:id="@+id/signup_header"
                android:layout_width="379dp"
                android:layout_height="42dp"
                android:layout_marginTop="76dp"
                android:paddingHorizontal="10dp"
                android:text="@string/sign_up"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/usernameLayout"
                android:layout_width="375dp"
                android:layout_height="71dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/emailLayout"
                app:layout_constraintTop_toBottomOf="@+id/signup_header">

                <TextView
                    android:id="@+id/label_username"
                    android:layout_width="84dp"
                    android:layout_height="25dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteY="192dp" />

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="254dp"
                    android:layout_height="39dp"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/enter_a_username"
                    android:inputType="text"
                    android:paddingHorizontal="10dp"
                    android:textColorHint="@color/black"
                    tools:layout_editor_absoluteY="217dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="375dp"
                android:layout_height="71dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/usernameLayout"
                app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

                <TextView
                    android:id="@+id/label_email"
                    android:layout_width="84dp"
                    android:layout_height="25dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteY="192dp" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="254dp"
                    android:layout_height="39dp"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="10dp"
                    android:textColorHint="@color/black"
                    tools:layout_editor_absoluteY="217dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/passwordLayout"
                android:layout_width="371dp"
                android:layout_height="92dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.416"

                app:layout_constraintStart_toStartOf="@+id/emailLayout"
                app:layout_constraintTop_toBottomOf="@+id/emailLayout">

                <TextView
                    android:id="@+id/label_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    tools:ignore="TextViewEdits"
                    tools:layout_editor_absoluteY="273dp" />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="254dp"
                    android:layout_height="45dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/enter_your_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingHorizontal="10dp"
                    android:textColorHint="@color/black"
                    tools:layout_editor_absoluteY="292dp" />


                <TextView
                    android:id="@+id/label_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteY="337dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/confirmPassLayout"
                android:layout_width="375dp"
                android:layout_height="71dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/passwordLayout"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout">

                <EditText
                    android:id="@+id/inputConfPass"
                    android:layout_width="254dp"
                    android:layout_height="39dp"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="10dp"
                    android:textColorHint="@color/black"
                    tools:layout_editor_absoluteY="217dp" />

                <TextView
                    android:id="@+id/labelConfPass"
                    android:layout_width="195dp"
                    android:layout_height="25dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/label_confirm_password"
                    android:textColor="@color/black"
                    tools:layout_editor_absoluteY="192dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="375dp"
                android:layout_height="119dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/confirmPassLayout"
                app:layout_constraintTop_toBottomOf="@+id/confirmPassLayout">


                <Button
                    android:id="@+id/btn_singup"
                    android:layout_width="372dp"
                    android:layout_height="52dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/green500"
                    android:text="@string/sign_up"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/txt_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black"
                        tools:layout_editor_absoluteY="420dp" />

                    <TextView
                        android:id="@+id/txt_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/green500"
                        tools:layout_editor_absoluteX="196dp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</FrameLayout>